auto generate superhero name

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container">
         <!-- user input data or click on button -->
         <div class="input">
-            <input type="search" name="" id="search-hero">
-            <button id="random-gen">search</button>
+            <input type="search" name="" id="input-value">
+            <button id="search">search</button>
             <button id="random-gen">Auto generate</button>
         </div>
 
@@ -22,15 +22,17 @@
             <!-- superhero image -->
             <div class="super-hero details">
                 <!-- the image -->
-                <img src="" alt="" srcset="">
+                <img id="superhero-image" src="" alt="" srcset="">
                 <!-- the name -->
                 <h2 class="name"></h2>
                 <!-- stats -->
                 <ul class="power-stats">
-                    <li class="stats">Intelligence : 38</li>
+                    <li class="stats"></li>
                 </ul>
             </div>
         </div>
     </div>
+    <!-- js -->
+    <script src="/app.js"></script>
 </body>
 </html>
