--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <!-- the name -->
                 <h2 class="name"></h2>
                 <!-- stats -->
-                <ul class="power-stats">
-                    <li class="stats"></li>
-                </ul>
+                <div class="power-stats">
+                    
+                </div>
             </div>
         </div>
     </div>
