made the code cleaner so it can appear dynamically

--- a/index.html
+++ b/index.html
@@ -20,15 +20,8 @@
         <!-- output -->
         <div class="output">
             <!-- superhero image -->
-            <div class="super-hero details">
-                <!-- the image -->
-                <img id="superhero-image" src="" alt="" srcset="">
-                <!-- the name -->
-                <h2 class="name"></h2>
-                <!-- stats -->
-                <div class="power-stats">
-                    
-                </div>
+            <div class="super-hero-details">
+              
             </div>
         </div>
     </div>
