did few spacing and added h1{}

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>SuperHero Generator</title>
 </head>
 <body>
+    
     <div class="container">
+        <h1>SUPERHERO GENERATOR</h1>
         <!-- user input data or click on button -->
         <div class="input">
             <input type="search" name="" id="input-value">
