--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <button id="search">search</button>
             <button id="random-gen">Auto generate</button>
         </div>
-
+        <span class="error">
+            
+        </span>
         <!-- output -->
         <div class="output">
             <!-- superhero image -->
